--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'androidx.navigation.safeargs'
     id 'com.google.devtools.ksp'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -50,6 +51,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation(platform 'com.google.firebase:firebase-bom:32.3.1')
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'io.coil-kt:coil:2.4.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.9.0'
 
     def room_version = "2.5.2"
 
